--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <section class="Specializing-sec">
 
-        <div class="Specializing-sec-intro">\
+        <div class="Specializing-sec-intro">
             <h2>Specializing In</h2>
             <p>d by the readable content of a page when looking at its layout.  of a page when looking at its layout. The point of usi T</p>
         </div>
@@ -92,7 +92,7 @@
                 <img src="img/verify.png" alt="">
                 <h3>SEO Friendly</h3><p> is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a it look l</p></div>
         
-            </section>
+      </section>
         
 
 
